# PitGO

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.codex/: hooks.json
.githooks/: pre-commit
.zed/: settings.json  tasks.json
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  main.rs
backend/src/routers/: customer.rs  mod.rs  vehicle.rs  vehicle_ownership.rs
backend/src/tests/: error.rs  mod.rs
backend/tests/: api.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/customer/: commands.rs  handlers.rs  mod.rs  ports.rs
crates/application/src/customer_vehicle_flow/: ports.rs
crates/application/src/ownership/: commands.rs  handlers.rs  mod.rs  ports.rs
crates/application/src/tests/: customer.rs  mod.rs  ownership.rs  vehicle.rs
crates/application/src/vehicle/: commands.rs  handlers.rs  mod.rs  ports.rs
crates/domain/: Cargo.toml
crates/domain/src/: ids.rs  lib.rs
crates/domain/src/customer/: aggregate.rs  aggregate_tests.rs  error.rs  event.rs  mod.rs  permit.rs  state.rs
crates/domain/src/customer_contact_book/: aggregate.rs  error.rs  event.rs  mod.rs
crates/domain/src/vehicle/: aggregate.rs  aggregate_tests.rs  error.rs  event.rs  mod.rs  permit.rs  state.rs
crates/domain/src/vehicle_ownership/: aggregate.rs  aggregate_tests.rs  error.rs  event.rs  mod.rs  snapshot.rs  state.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: customer_repository.rs  lib.rs  vehicle_ownership_repository.rs  vehicle_repository.rs
crates/infrastructure/src/tests/: customer_repository.rs  mod.rs  vehicle_ownership_repository.rs  vehicle_repository.rs
crates/shared/: Cargo.toml
crates/shared/src/: aggregate.rs  audit.rs  event.rs  ids.rs  lib.rs
docs/ai/15.07.2026/: pitgo_review_fable5.md
docs/ai/18.07.2026/: PROJECT_REVIEW.md  REVIEW_CHECKLIST.md  ROADMAP.md
docs/ai/18.07.2026/TASKS/: 001-ownership-invariant.md  002-repository-already-exists.md  003-api-error-codes.md  004-get-ownership-endpoint.md  005-http-integration-tests.md  WORKFLOW.md
docs/architecture/: 01_system_overview.md  02_workspace.md  03_customer.md  04_vehicle.md  05_vehicle_ownership.md  06_dependency_graph.md  07_domain_model.md  08_aggregate_boundaries.md  09_request_lifecycle.md  10_repository_architecture.md  11_tests.md  12_async_architecture.md  13_gaps.md  README.md
docs/domain/: STYLE_GUIDE.md  customer.md  rust-mapping.md  vehicle.md
docs/domain/customer/: README.md  customer.md
docs/domain/customer/diagrams/: 00-overview.mmd  01-customer-lifecycle.mmd  02-contact-book.mmd  03-profile.mmd  04-preferences.mmd  05-consent-ledger.mmd  06-eventing-audit.mmd  07-activation-flow.mmd  08-identity-registry.mmd  09-application-consistency.mmd  10-access-auth-readside.mmd  11-mvp-domain-map.mmd  11-mvp-overview.mmd  Full.mmd
docs/domain/vehicle/diagrams/: 00-vehicle-bounded-context.mmd  01-vehicle-aggregate.mmd  02-vehicle-ownership-aggregate.mmd  03-vehicle-activation-flow.mmd  04-vehicle-vin-assignment-flow.mmd  05-vehicle-ownership-transfer-flow.mmd  06-vehicle-domain-events.mmd  07-vehicle-domain-boundaries.mmd
docs/project/: README.md  dependencies.md  scope-freeze.md  service-map.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: App.tsx
frontend/src/app/layout/: AppLayout.module.css  AppLayout.tsx
frontend/src/features/landing/: LandingPage.module.css  LandingPage.tsx
frontend/src/pages/cars/: CarDetailPage.tsx  CarsPage.tsx
frontend/src/pages/clients/: ClientDetailPage.tsx  ClientsPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
scripts/: update-graph.sh
(+56 files in other folders)
