[workspace]
resolver = "3"
members = ["backend", "crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Daniil Bocharenko"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8.9"
