[workspace]
resolver = "3"
members = ["backend", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]

shared = { path = "crates/shared" }
async-trait = "0.1"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
sqlx = {
  version = "0.8",
  features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
  ]
}
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
