[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
application = { path = "../crates/application" }
infrastructure = { path = "../crates/infrastructure"}
domain = { path = "../crates/domain" }

# External dependencies
tower-http = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
